--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,13 @@ body {
 	width: 1200px;
 	margin: 0 auto;
 }
+
+#block {
+	margin-top: 2000px;
+	width: 323px;
+	height: 323px;
+}
+
+.original {
+	background-image: url("../images/nystreetsA.jpg");
+}
