added different images when div enters 50percent on scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,7 @@ body {
 .original {
 	background-image: url("../images/nystreetsA.jpg");
 }
+
+.change {
+	background-image: url("../images/nystreetsB.jpg");
+}
